--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
-.ace_editor {
-  min-height: 400px;
+#apply-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
 }
+
